--- a/flex-intro.html
+++ b/flex-intro.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex Intro</title>
-    <link rel="stylesheet" href="./css/flex-intro.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/flex-intro.css" />
+  </head>
+  <body>
     <h1>FLEX</h1>
-</body>
+
+    <ul class="nav">
+      <li>Home</li>
+      <li>About</li>
+      <li>People</li>
+      <li>Contact</li>
+      <li>Courses</li>
+    </ul>
+
+    <div class="container">
+      <header>header</header>
+      <aside class="left">left</aside>
+      <main>main</main>
+      <aside class="right">right</aside>
+      <footer>footer</footer>
+    </div>
+  </body>
 </html>
